fixed contact alignment

--- a/client/src/components/Contact/style.css
+++ b/client/src/components/Contact/style.css
@@ -4,3 +4,11 @@
     margin-bottom: 5em;
     font-family: "Cairo", sans-serif;
 }
+
+.contactLinks {
+
+}
+
+.contactForm {
+    text-align: left;
+}
